--- a/frontent/package.json
+++ b/frontent/package.json
@@ -19,6 +19,7 @@
     "expo": "^51.0.2",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
