--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^0.13.3
   provider: ^5.0.0
   intl: ^0.17.0
+  flutter_typeahead: ^4.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
