--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   provider: ^5.0.0
   intl: ^0.17.0
   flutter_typeahead: ^4.0.0
+  table_calendar: ^3.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
