Added ML Model to to customer classification

--- a/.gitignore
+++ b/.gitignore
@@ -441,3 +441,4 @@ app.*.symbols
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 !.vscode/settings.json
+backend/ai_module/client_segment_classifier.joblib
