--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_typeahead: ^4.0.0
   table_calendar: ^3.0.4
   shared_preferences: ^2.0.6 # or the latest version
+  flutter_secure_storage: ^4.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
