--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   table_calendar: ^3.0.4
   shared_preferences: ^2.0.6 # or the latest version
   flutter_secure_storage: ^9.2.2
+  multi_select_flutter: ^4.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
