--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   multi_select_flutter: ^4.0.0
   syncfusion_flutter_calendar: ^27.2.5
+  fl_chart: ^0.69.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
