--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   multi_select_flutter: ^4.0.0
   syncfusion_flutter_calendar: ^27.2.5
   fl_chart: ^0.69.2
+  mailer: ^6.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
