--- a/flutter_frontend/android/app/src/main/AndroidManifest.xml
+++ b/flutter_frontend/android/app/src/main/AndroidManifest.xml
@@ -3,10 +3,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-        android:label="flutter_frontend"
+        android:label="IN-CARS"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"
-        android:enableOnBackInvokedCallback="true"> 
+        android:icon="@drawable/ic_launcher_background"
+        android:usesCleartextTraffic="true">
+    android:enableOnBackInvokedCallback="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
