--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   dropdown_search: ^5.0.2
   flutter_colorpicker: ^1.1.0
+  pdf: ^3.10.0
+  printing: ^5.9.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
