--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   syncfusion_flutter_calendar: ^27.2.5
   fl_chart: ^0.69.2
   mailer: ^6.2.0
+  get_it: ^7.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
