Added buyCostPart to Part model, Fixed trouble with migrations

--- a/.gitignore
+++ b/.gitignore
@@ -444,3 +444,5 @@ app.*.symbols
 backend/ai_module/client_segment_classifier.joblib
 backend/workshops/migrations/0004_alter_workshop_post_code.py
 backend/requirements.txt
+backup.sql
+backend/backup1.dump
