--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   pdf: ^3.10.0
   printing: ^5.9.1
   path_provider: ^2.1.5
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
