--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   dartz: ^0.10.1
   connectivity_plus: ^5.0.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
