--- a/.gitignore
+++ b/.gitignore
@@ -447,3 +447,7 @@ backend/requirements.txt
 backup.sql
 backend/backup1.dump
 flutter_frontend/android/app/debug/app-debug.apk
+flutter_frontend/android/app/.cxx/Debug/10603e3t/arm64-v8a/configure_fingerprint.bin
+flutter_frontend/android/app/.cxx/Debug/10603e3t/armeabi-v7a/configure_fingerprint.bin
+flutter_frontend/android/app/.cxx/Debug/10603e3t/x86/configure_fingerprint.bin
+flutter_frontend/android/app/.cxx/Debug/10603e3t/x86_64/configure_fingerprint.bin
