--- a/.gitignore
+++ b/.gitignore
@@ -451,3 +451,4 @@ flutter_frontend/android/app/.cxx/Debug/10603e3t/arm64-v8a/configure_fingerprint
 flutter_frontend/android/app/.cxx/Debug/10603e3t/armeabi-v7a/configure_fingerprint.bin
 flutter_frontend/android/app/.cxx/Debug/10603e3t/x86/configure_fingerprint.bin
 flutter_frontend/android/app/.cxx/Debug/10603e3t/x86_64/configure_fingerprint.bin
+flutter_frontend/android/app/.cxx/Debug/10603e3t/arm64-v8a/configure_fingerprint.bin
