--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   dartz: ^0.10.1
   connectivity_plus: ^5.0.0
   dio: ^5.8.0+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
