Refactor AppointmentDetailsScreen: Clean up code formatting, adjust initial expansion states, and improve readability of event dispatches

--- a/flutter_frontend/.gitignore
+++ b/flutter_frontend/.gitignore
@@ -23,7 +23,7 @@ build/
 **/android/gradlew
 **/android/gradlew.bat
 **/android/local.properties
-**/android/app/debug.keystore
+**/android/app
 
 # iOS related
 **/ios/Flutter/.last_build_id
