--- a/flutter_frontend/pubspec.yaml
+++ b/flutter_frontend/pubspec.yaml
@@ -30,31 +30,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.2
-  provider: ^6.1.2
-  intl: ^0.19.0
+  http: ^1.4.0
+  provider: ^6.1.5
+  intl: ^0.20.2
   flutter_typeahead: ^5.2.0
-  table_calendar: ^3.0.4
-  shared_preferences: ^2.0.6 # or the latest version
+  table_calendar: ^3.2.0
+  shared_preferences: ^2.2.2 # aktualizacja do najnowszej stabilnej wersji
   flutter_secure_storage: ^9.2.2
   multi_select_flutter: ^4.0.0
   # syncfusion_flutter_calendar: ^27.2.5
-  fl_chart: ^0.69.2
+  fl_chart: ^1.0.0
   mailer: ^6.2.0
-  get_it: ^7.2.0
+  get_it: ^8.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  dropdown_search: ^5.0.2
+  dropdown_search: ^6.0.2
   flutter_colorpicker: ^1.1.0
   pdf: ^3.10.0
   printing: ^5.9.1
   path_provider: ^2.1.5
   flutter_bloc: ^9.1.0
   dartz: ^0.10.1
-  connectivity_plus: ^5.0.0
+  connectivity_plus: ^6.1.4
   dio: ^5.8.0+1
   url_launcher: ^6.3.1
+  bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
